Fix: Minor changes

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -22,13 +22,5 @@
       - nano
       - htop
       - git
-      - netstat
+      - net-tools
     state: present
-
-- name: Configure MOTD
-  template:
-    src: motd.j2
-    dest: /etc/motd
-    owner: root
-    group: root
-    mode: 0644
