--- a/roles/ntp/handlers/main.yml
+++ b/roles/ntp/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
 - name: restart ntp
-  service:
+  systemd:
     name: "{{ 'ntp' if ansible_os_family == 'Debian' else 'ntpd' }}"
     state: restarted
